refactor: split validating input value and setting value